Fixed horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 main {
   height: fit-content;
-  width: 100vw;
+  width: 100%;
 }
 
 h1 {
@@ -98,7 +98,7 @@ header ul {
 
 .footer {
   background-color: #431e61;
-  width: 100vw;
+  width: 100%;
   position: relative;
   text-align: center;
   padding: 15px 0;
